# examination-generation-system

./: .gitmodules
exam_generator/: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ref.txt
exam_generator/docs/: mkdocs.yml
exam_generator/docs/docs/: index.md
exam_generator/notebooks/: DeepSeek-R1-Distill-Qwen-1.5B-MCQA.ipynb  check_env.ipynb  fine-tuning.ipynb  fine-tuning2.ipynb
exam_generator/src/modeling/: predict.py  train.py
