[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.2"
description = "A short description of the project."
authors = [
  { name = "EGS Team" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets",
    "hf-xet",
    "ipywidgets",
    "loguru",
    "mkdocs",
    "peft",
    "pip",
    "python-dotenv",
    "ruff",
    "unsloth",
    "tqdm",
    "transformers",
    "trl",
    "typer",
    "notebook>=7.4.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "evaluate>=0.4.5",
]
requires-python = "==3.12.10"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

